--- a/udp_spectr/fft_writer/fft_writer.csproj
+++ b/udp_spectr/fft_writer/fft_writer.csproj
@@ -88,6 +88,9 @@
     <Compile Include="Empty2.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Empty3.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="FFT.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -108,6 +111,9 @@
     <Compile Include="Plot2.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Plot3.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TelnetInterface.cs" />
@@ -124,6 +130,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Plot.resx">
       <DependentUpon>Plot.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Plot3.resx">
+      <DependentUpon>Plot3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
